Fix layout bug on dropdown menu

--- a/applications/Unity.GrantManager/src/Unity.GrantManager.Web/Views/Shared/Components/ApplicationAttachments/ApplicationAttachments.css
+++ b/applications/Unity.GrantManager/src/Unity.GrantManager.Web/Views/Shared/Components/ApplicationAttachments/ApplicationAttachments.css
@@ -24,7 +24,7 @@
     position: absolute;
     right: 0;
     background-color: #f9f9f9;
-    min-width: 270px;
+    min-width: 250px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1000;
     --bs-btn-active-color: var(--bc-colors-white-primary-500);
@@ -48,4 +48,8 @@
     width: 100%;    
     display: block;
     text-align: left; /*This will result in centering the link text, which is probably what you want -brianjohnsondesign.com*/
+}
+
+#ApplicationAttachmentsTable {
+    padding-bottom: 80px;
 }
