--- a/applications/Unity.GrantManager/src/Unity.GrantManager.Web/Views/Shared/Components/AssessmentResultAttachments/AssessmentResultAttachments.css
+++ b/applications/Unity.GrantManager/src/Unity.GrantManager.Web/Views/Shared/Components/AssessmentResultAttachments/AssessmentResultAttachments.css
@@ -7,3 +7,6 @@
     text-align: center;
 }
 
+#AssessmentResultAttachmentsTable {
+    padding-bottom: 80px;
+}
